move important page styling out of global.css and into the actual portfolio post page itself. Fix weird width constraint/off center-ness of reading page. I finally understand how :global() and per page styling in astro works

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,28 +131,11 @@ table {
   width: 100%;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 1em;
+.prose .apostrophe-fix-right {
+  margin-right: -0.7em;
 }
-
-@media (min-width: 720px) {
-  .prose img.full {
-    max-width: 100%;
-  }
-  .prose img.three-quarters {
-    max-width: 75%;
-  }
-  .prose img.half {
-    max-width: 50%;
-  }
-  .prose img.less-than-half {
-    max-width: 45%;
-  }
-  .prose img.third {
-    max-width: 33.333%;
-  }
+.prose .apostrophe-fix-left {
+  margin-left: -0.7em;
 }
 
 div.code-container span.copy-link-text {
@@ -178,52 +161,6 @@ pre > code {
 
 pre.astro-code {
   cursor: var(--cursor-light), auto;
-}
-
-div.code-container {
-  background-color: #23262e;
-  overflow: hidden;
-  cursor: var(--cursor-light), auto;
-  margin-bottom: 1em;
-  border-radius: 10px;
-}
-
-div.code-container > div.code-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  overflow: hidden;
-  padding: 0.5em 0.8em;
-  font-family: monospace !important;
-  font-size: 0.75em;
-  color: #d5ced9;
-  border-color: #d5ced9;
-  border-style: solid;
-  border-width: 1px 0px 0px 0px;
-}
-
-div.code-footer div.code-filename {
-  max-width: 70%;
-}
-
-div.code-links {
-  display: flex;
-  align-items: center;
-  gap: 1em;
-}
-
-div.code-links img {
-  height: 20px;
-  margin-bottom: 0;
-  display: flex;
-}
-
-div.code-links a {
-  cursor: var(--cursor-link-light), auto;
-}
-
-span.copy-link-text {
-  font-size: 0.8em;
 }
 
 blockquote {
